--- a/metabase-exporter/appsettings.json
+++ b/metabase-exporter/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "MetabaseApi": {
-    "Url": "http://metabase:3000",
-    "Username": "mauricioscheffer@gmail.com",
-    "Password":  "BhaptWyFKeH9Fd",
+    "Url": "http://161.117.87.58:3000",
+    "Username": "admin",
+    "Password":  "admin",
     "IgnoreSSLErrors": true
   }
 }
